liquidation.com (archived on 2004-12-06)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 7392,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.59,
  "homepage_snapshot_redirected_domain": "liquidation.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929051706id_/http://www.liquidation.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929051706id_/http%3A//liquidation.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "liquidation.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041206230040id_/http%3A//www.liquidation.com/privacy.html",
  "policy_title": "Surplus items auction, discount surplus inventories marketplace, wholesale closeouts",
  "policy_url": "liquidation.com/privacy.html",
  "sha1": "d899b45cbc7ec20719c9e99f6b708d2c08468f7c",
  "simhash": 11929662103818108213,
  "simhash_updated": true,
  "site_hostname": "liquidation.com",
  "site_url": "http://liquidation.com",
  "smog": 13.45,
  "strict_updated": true,
  "timestamp": "20041206230040",
  "word_count": 1201,
  "year": 2004
}

--- a/l/li/liq/liquidation.com.html
+++ b/l/li/liq/liquidation.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the liquidation.com privacy policy that was archived on 2004-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040627083200id_/http%3A//www.liquidation.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the liquidation.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206230040id_/http%3A//www.liquidation.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 		<title>Surplus items auction, discount surplus inventories marketplace, wholesale closeouts</title>	
@@ -82,12 +82,12 @@
 		<!-- /HEADER -->
 		<table width="748" cellpadding="0" cellspacing="0" border="0">
 			<tbody><tr>
-				<td width="748" colspan="2" class="Arial16BlackBold"><br>Privacy Policy for Liquidation.com<br><img src="http://www.liquidation.com/images/black.gif" width="748" height="1" vspace="5"><br></td>
+				<td width="748" colspan="2" class="Arial16BlackBold"><br>Privacy Policy for Liquidation.com<br><img src="http://i.liquidation.com/images/black.gif" width="748" height="1" vspace="5"><br></td>
 			</tr>
 			<tr>
 				<td width="600">Liquidation.com, a division of Liquidity Services, Inc., is a licensee of the TRUSTe Privacy Program. TRUSTe is an independent, non-profit organization whose mission is to build users' trust and confidence in the Internet by promoting the use of fair information practices. Because Liqiuidation.com wants to demonstrate its commitment to your privacy, it has agreed to disclose its information practices and have its privacy practices reviewed for compliance by TRUSTe. By displaying the TRUSTe trustmark,  Liquidation.com has agreed to notify you of:
 			<br><br></td>
-				<td width="148" align="center" valign="top"><a href="https://www.truste.org/validate/7119" target="_blank"><img src="http://www.liquidation.com/images/clickSeal.gif" height="73" width="91" border="0" alt="TRUSTe: Click to Verify"></a></td>
+				<td width="148" align="center" valign="top"><a href="https://www.truste.org/validate/7119" target="_blank"><img src="http://i.liquidation.com/images/clickSeal.gif" height="73" width="91" border="0" alt="TRUSTe: Click to Verify"></a></td>
 			</tr>
 			<tr>
 				<td colspan="2">
@@ -149,7 +149,7 @@
 		<!-- FOOTER -->
 			<br>
 	</td>
-	<td width="13"><img src="http://www.liquidation.com/images/spacer.gif" width="13" height="1" border="0"></td>
+	<td width="13"><img src="http://i.liquidation.com/images/spacer.gif" width="13" height="1" border="0"></td>
 	<td valign="top">
 
 	<!-- Start B2B Works 125x125 -->
@@ -162,7 +162,7 @@
 
 	<!-- End B2B Works 125x125 -->
 	
-	<img src="http://www.liquidation.com/images/spacer.gif" width="1" height="7" border="0"><br>
+	<img src="http://i.liquidation.com/images/spacer.gif" width="1" height="7" border="0"><br>
 	
 	<!-- Start B2B Works 125x600 -->
 	
@@ -196,60 +196,54 @@
   	|
   	<a href="http://www.liquidation.com/help/">HELP</a>
   	|
-  	<a href="http://www.liquidation.com/about/">ABOUT US</a></td>
+  	<a href="http://www.liquidation.com/about/">ABOUT US</a>
+
+	<p class="Arial9Blue"><br>
+	<a href="http://www.liquidation.com/terms.html">Terms and Conditions</a>
+	<img src="http://i.liquidation.com/images/bullet03.gif" width="10" height="9">
+	<a href="http://www.liquidation.com/privacy.html">Privacy Policy</a>
+	<img src="http://i.liquidation.com/images/bullet03.gif" width="10" height="9">
+	<a href="http://web.liquidation.com/contactus/">Contact Us</a>
+	</p>
+
+	</td>
 </tr>
 <tr>
 	<td width="748">
-		<img border="0" src="http://www.liquidation.com/images/spacer.gif" width="1" height="20">
+		<img border="0" src="http://i.liquidation.com/images/spacer.gif" width="1" height="20">
 		<!-- LANDING PAGE LINKS -->
-		<a href="http://www.liquidation.com/wholesale_childrens_clothing.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
-		<a href="http://www.liquidation.com/electronics_closeouts.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
-		<a href="http://www.liquidation.com/overstock_merchandise.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
-		<a href="http://www.liquidation.com/cheap_wholesale_products.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
-		<a href="http://www.liquidation.com/wholesale_closeouts.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
-		<a href="http://www.liquidation.com/wholesale_laptop_computer.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
-		<a href="http://www.liquidation.com/surplus_merchandise.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
-		<a href="http://www.liquidation.com/wholesale_general_merchandise.html"><img border="0" src="http://www.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/wholesale_childrens_clothing.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/electronics_closeouts.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/overstock_merchandise.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/cheap_wholesale_products.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/wholesale_closeouts.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/wholesale_laptop_computer.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/surplus_merchandise.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
+		<a href="http://www.liquidation.com/wholesale_general_merchandise.html"><img border="0" src="http://i.liquidation.com/images/spacer.gif" width="5" height="5"></a>
 		<!-- /LANDING PAGE LINKS -->
 	</td>
 </tr>
 <tr>
 	<td width="748" align="center">
 		<table border="0">
-		<tbody><tr nowrap="" valign="top" align="center">
-		<td class="Arial9Blue">
-		Copyright © 1994-2004 <a href="http://www.liquidityservicesinc.com/" target="_blank">Liquidity Services, Inc.</a> All rights reserved.<br>
-		<a href="http://www.liquidation.com/terms.html">Terms and Conditions</a>
-		<img src="http://www.liquidation.com/images/bullet03.gif" width="10" height="9">
-		<a href="http://www.liquidation.com/privacy.html">Privacy Policy</a>
-		<img src="http://www.liquidation.com/images/bullet03.gif" width="10" height="9">
-		<a href="http://web.liquidation.com/contactus/">Contact Us</a></td>
-
+		<tbody><tr nowrap="" valign="middle" align="center">
+		<td class="Arial9Blue" style="padding-right: 20px;">
+		Copyright © 1994-2004 <a href="http://www.liquidityservicesinc.com/" target="_blank">Liquidity Services, Inc.</a> All rights reserved.<br><img src="http://i.liquidation.com/images/spacer.gif" width="1" height="5" border="0"><br><a href="http://www.govliquidation.com">Government Liquidation</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.gowholesale.com">goWholesale</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.uksurplus.com">UKsurplus</a>
+		</td>
 		<td>
-		<a href="http://www.bbbonline.org/r.cfm?ID=11000171"><img align="top" border="0" src="http://www.liquidation.com/images/footer/bbbonline.gif" width="90" height="31"></a><br>
-		<img src="http://www.liquidation.com/images/spacer.gif" height="4"><br>
-		<a href="http://www.liquidation.com/privacy.html"><img align="top" border="0" src="http://www.liquidation.com/images/footer/trustee.gif" width="116" height="31"></a>
+		<a href="http://www.bbbonline.org/r.cfm?ID=11000171" target="_blank"><img align="top" border="0" src="http://i.liquidation.com/images/footer/bbbonline.gif" width="90" height="31"></a><br>
+		<img src="http://i.liquidation.com/images/spacer.gif" height="4"><br>
+		<a href="http://www.liquidation.com/privacy.html"><img align="top" border="0" src="http://i.liquidation.com/images/footer/trustee.gif" width="116" height="31"></a>
 		</td>
 
 		<td>
-		<img src="http://www.liquidation.com/images/partners/verisignPayment.gif" border="0" alt="Verisign Payment Services"><br>
-		<img src="http://www.liquidation.com/images/spacer.gif" height="4"><br>
- 		<img align="top" border="0" src="http://www.liquidation.com/images/partners/paypal.gif">
+		<img src="http://i.liquidation.com/images/partners/verisignPayment.gif" border="0" alt="Verisign Payment Services"><br>
+		<img src="http://i.liquidation.com/images/spacer.gif" height="4"><br>
+ 		<a href="https://www.paypal.com/us/mrb/pal=D4MCP7YC7CDWE" target="_blank"><img align="top" border="0" src="http://i.liquidation.com/images/partners/paypal.gif" width="109" height="35"></a>
 		</td>
 
 		<td valign="center">
-			<!-- Start of D&B Web Logo code snippet -->
-			<script language="JavaScript">
-			var strSealURL='weblogos.dnb.com';
-			var sealID='A615D710-E80D-4F06-BC4E-3F6D8CAC3994';
-			var strDuns='933351611';
-			var strRWSPath='express.dnbsearch.com';
-			var strCountry='US';
-			var increment='true';
-			var strLang='EN';
-			</script>
-			<script language="JavaScript" src="https://weblogos.dnb.com/newsi.js"></script>
-			<!-- End of D&B Web Logo code snippet -->
+			<a href="http://www.dnb.com/" target="_blank"><img align="top" border="0" src="http://i.liquidation.com/images/dnb.gif" width="180" height="60"></a>
 		</td>
 
 		</tr>
