--- a/a/af/aff/affordabletours.com.html
+++ b/a/af/aff/affordabletours.com.html
@@ -1,60 +1,153 @@
-<!--The following is the downloaded HTML source of the affordabletours.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610164144id_/http%3A//www.affordabletours.com/Terms/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the affordabletours.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206230408id_/http%3A//www.affordabletours.com/Terms/privacypolicy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy - Huge Discounts on: Tours, Globus Tours, Trafalgar Tours, Cosmos Tours, Collette, Contiki, Insight, General, CIE and More.</title>
 <meta name="KEYWORDS" content="Tours,Globus,Cosmos,Trafalgar,Tauck,Gate1,CIE,General,Insight,Maupin,Collette,Abercrombie and Kent,Contiki,Princess,AAT Kings,Perillo,Newmans,Pacific Delight,Travcoa,Isram,Alba,Mayflower,Castles,Africa,Antarctica,Asia,Central America,Eastern Europe,Middle East,North America,Scandinavia,South America,South Pacific">
-<link rel="stylesheet" type="text/css" href="http://img.affordabletours.com/AffordableCruisesWeb/JSCSS/cruises.css">
-<style>
-<!--
-h1
-	{margin-right:0in;
-	margin-left:0in;
-	font-size:24.0pt;
-	font-family:"Times New Roman";
-	color:windowtext;
-	font-weight:bold}
--->
-</style>
+<link rel="stylesheet" type="text/css" href="http://img.affordabletours.com/JSCSS/core.css">
 </head>
 
 <body marginheight="0" marginwidth="0" topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0">
-<table cellpadding="0" cellspacing="0" border="0" width="100%" bgcolor="#2d3df5"><tbody><tr><td>
-<table cellpadding="0" cellspacing="0" border="0" width="100%">
-<tbody><tr><td><a href="http://www.affordabletours.com"><img src="http://img.affordabletours.com/AffordableTours/Site/affordabletours_logo.gif" width="296" height="45" border="0"></a></td>
-<td valign="middle">
-<font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small; font-weight: bold; color:yellow">
-Call us toll-free:</font><br>
-<font style="font-family: Verdana,Arial,Helvetica; font-size: small; color:white; font-weight: bold;">1 866 265 2651</font>
+<!-- Header -->
+<table cellpadding="0" cellspacing="0" border="0" width="770">
+<tbody><tr><td valign="top"> &nbsp; <a href="http://www.affordabletours.com">
+  <img src="http://img.affordabletours.com/img/TopLogo.gif" border="0" width="227" height="45"></a></td>
+<td align="right">
+<table cellpadding="0" cellspacing="0" border="0" style="font-family: Arial; font-size:6px;">
+<tbody><tr><td>
+<font style="font-family: Verdana, Halvetica, Arial; font-size: 20px; color:#336699; font-weight: bold;">1-800-935-2620</font>
+</td></tr>
+<tr><td>
+<font style="font-family: Verdana, Halvetica, Arial; font-size: xx-small; color:#336699;">
+MON-FRI 8AM - 10PM ET | SAT-SUN 9AM - 6PM ET</font>
+</td></tr>
+</tbody></table>
 </td>
-<td valign="middle" align="right">
-<table cellpadding="0" cellspacing="0" border="0">
-<tbody><tr><td><a href="http://www.affordabletours.com">
-  <img name="toursimg" src="http://img.affordabletours.com/AffordableCruisesWeb/Subimages/TopLinks/Tours_Over.gif" border="0" alt="Tours" width="48" height="45"></a></td>
-<td><a href="http://cruises.affordabletours.com">
-<img name="cruisesimg" src="http://img.affordabletours.com/AffordableCruisesWeb/Subimages/TopLinks/Cruises_Off.gif" onmouseover="cruisesimg.src='http://img.affordabletours.com/AffordableCruisesWeb/Subimages/TopLinks/Cruises_Over.gif'" onmouseout="cruisesimg.src='http://img.affordabletours.com/AffordableCruisesWeb/Subimages/TopLinks/Cruises_Off.gif'" border="0" alt="Cruises" width="48" height="45"></a></td>
-<td><a href="http://rivers.affordabletours.com">
-<img name="resortsimg" onmouseover="resortsimg.src='http://img.affordabletours.com/AffordableCruisesWeb/Subimages/TopLinks/River_Over.gif'" onmouseout="resortsimg.src='http://img.affordabletours.com/AffordableCruisesWeb/Subimages/TopLinks/River_Off.gif'" src="http://img.affordabletours.com/AffordableCruisesWeb/Subimages/TopLinks/River_Off.gif" border="0" alt="River Cruises" width="48" height="45"></a></td>
 </tr>
 </tbody></table>
-</td></tr>
-</tbody></table>
-</td><td width="20"> </td>
 
+<table cellspacing="0" cellpadding="0" border="0" width="770" style="font-family: Arial; font-size:6px;">
+<tbody><tr><td valign="bottom">
+<table cellspacing="0" cellpadding="0" border="0" style="font-family: Arial; font-size:4px;">
+<tbody><tr><td width="20">&nbsp;</td><td><a href="http://www.affordabletours.com">
+  <img src="http://img.affordabletours.com/img/Tab_TON.gif" border="0" width="76" height="28"></a></td><td>
+  <a href="http://cruises.affordabletours.com">
+  <img src="http://img.affordabletours.com/img/Tab_COFF.gif" border="0" width="83" height="27"></a></td><td>
+  <a href="http://rivers.affordabletours.com">
+  <img src="http://img.affordabletours.com/img/Tab_ROFF.gif" border="0" width="125" height="27"></a></td></tr>
+</tbody></table>
+</td>
+<td align="right">
+
+
+<table cellspacing="0" cellpadding="0" border="0" bgcolor="#F9FFF5" style="border-top: 1px solid #d7edd2; border-bottom: 1px solid #d7edd2">
+<tbody><tr><td>
+<table cellspacing="0" celpadding="0" border="0" style="font-family: Arial; font-size:6px;">
+<form name="newsletter" action="http://www.affordabletours.com/Newsletter/subscribe/" target="_blank" method="post"></form>
+<tbody><tr><td colspan="2" align="center"><font style="font-family: Verdana, Halvetica, Arial; font-size: 9px; color=#999999; font-weight: bold">Sign up for Newsletter &nbsp; </font></td></tr>
+<tr><td><font style="font-family: Verdana, Halvetica, Arial; font-size: 9px; color=#000000; font-weight: bold; ">E-mail: </font></td><td><input name="ea" class="topbarlink" size="12"></td></tr>
+</tbody></table>
+</td>
+<td valign="bottom"> &nbsp;
+<input class="pointerhand" id="submitsearch" type="image" alt="Subscribe" src="http://img.affordabletours.com/img/subscribe.gif" border="0" value="submit" width="61" height="11"></td>
 </tr>
 </tbody></table>
-<table cellpadding="0" cellspacing="0" border="0" width="100%">
-<tbody><tr><td width="5"> </td><td><a href="http://www.affordabletours.com/Globus_Tours" class="supplier">Globus Tours</a> | <a href="http://www.affordabletours.com/Trafalgar_Tours" class="supplier">Trafalgar Tours</a> | <a href="http://www.affordabletours.com/Cosmos_Tours" class="supplier">Cosmos</a> 
- | <a href="http://www.affordabletours.com/Gate1_Tours" class="supplier">Gate1</a> | <a href="http://www.affordabletours.com/General_Tours" class="supplier">General</a> | <a href="http://www.affordabletours.com/CIE_Tours" class="supplier">CIE</a> | <a href="http://www.affordabletours.com/Tauck_Tours" class="supplier">Tauck World Discovery</a>
-  | <a href="http://www.affordabletours.com/Insight_Tours" class="supplier">Insight</a> | <a href="http://www.affordabletours.com/Maupin_Tours" class="supplier">Maupin</a> | <a href="http://www.affordabletours.com/Abercrombie_and_Kent_Tours" class="supplier">A &amp; K</a>
-   | <a href="http://www.affordabletours.com/Collette_Tours" class="supplier">Collette</a> | <a href="http://www.affordabletours.com/Contiki_Tours" class="supplier">Contiki</a></td></tr>
-<tr><td width="5"> </td><td><a href="http://www.affordabletours.com/AAT_Kings_Tours" class="supplier">AAT Kings</a> | <a href="http://www.affordabletours.com/Value_World_Tours" class="supplier">Value World</a> | <a href="http://www.affordabletours.com/Newmans_Tours" class="supplier">Newmans</a> 
- | <a href="http://www.affordabletours.com/Pacific_Delight_Tours" class="supplier">Pacific Delight</a> | <a href="http://www.affordabletours.com/Perillo_Tours" class="supplier">Perillo</a>
- | <a href="http://www.affordabletours.com/Central_Holidays_Tours" class="supplier">Central Holidays</a> | <a href="http://www.affordabletours.com/Mayflower_Tours" class="supplier">Mayflower</a> | <a href="http://www.affordabletours.com/Travcoa_Tours" class="supplier">Travcoa</a> | <a href="http://www.affordabletours.com/Isram_Tours/" class="supplier">Isram</a> | <a href="http://www.affordabletours.com/Brennan_Tours/" class="supplier">Brennan</a> | <a href="http://www.affordabletours.com/search/More_Operators/" class="supplier">More ...</a>
+</td>
+</tr>
+<tr bgcolor="#3079C0"><td colspan="2">
+&nbsp;
 </td></tr>
 </tbody></table>
-<hr color="#e7cfab">
-<table cellpadding="0" cellspacing="0" border="0" width="100%">
+
+
+<table cellspacing="0" cellpadding="0" border="0" width="770" style="font-family: Arial; font-size:6px;">
+<tbody><tr><td>
+<table cellspacing="0" cellpadding="0" width="770" border="1" bordercolor="#6DBEE8" style="border-collapse: collapse; border-width: 1px;">
+        <tbody><tr height="20">
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Globus_Tours">Globus Tours</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                        &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Trafalgar_Tours">Trafalgar Tours</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Cosmos_Tours">Cosmos</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Insight_Tours">Insight</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/CIE_Tours">CIE</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Gate1_Tours">Gate 1</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/General_Tours">General</a>&nbsp;
+            </td>
+             <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Tauck_Tours">Tauck World Discovery</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Collette_Tours">Collette</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Value_World_Tours">Value World</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Brennan_Tours">Brennan</a>&nbsp;
+            </td>
+        </tr>
+</tbody></table>
+</td></tr>
+<tr><td>
+<table cellspacing="0" cellpadding="0" border="1" width="770" bordercolor="#6DBEE8" style="border-collapse: collapse; border-width: 1px;">
+        <tbody><tr height="20">
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Maupin_Tours">Maupin</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Abercrombie_and_Kent_Tours">A &amp; K</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/AAT_Kings_Tours">AAT Kings</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Homeric_Tours">Homeric</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Pacific_Delight_Tours">Pacific Delight</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Perillo_Tours">Perillo</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Rocky_Mountaineer_Tours">Rocky Mountaineer</a>&nbsp;
+            </td>
+             <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Isram_Tours">Isram</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Mayflower_Tours">Mayflower</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Travcoa_Tours">Travcoa</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/Contiki_Tours">Contiki</a>&nbsp;
+            </td>
+            <td class="topbar" onmouseover="this.className='topbarh'" onmouseout="this.className='topbar'" align="center">
+                    &nbsp;<a class="topbarlink" href="http://www.affordabletours.com/search/More_Operators">More ...</a>&nbsp;
+            </td>
+        </tr>
+</tbody></table>
+</td></tr>
+<tr bgcolor="#3079C0"><td>
+&nbsp;
+</td></tr>
+</tbody></table>
+<!-- End of Header -->
+<table cellpadding="0" cellspacing="0" border="0" width="770">
 <tbody><tr><td width="20">&nbsp;</td><td width="100%">
 <h1 style="text-align: justify">
 <font size="2"><span style="font-family: Verdana">PRIVACY POLICY</span></font></h1>
@@ -96,30 +189,20 @@ managerial procedures to safeguard and secure the information we collect online.
  
 
 <!-- Footer -->
-<table cellpadding="2" cellspacing="2" border="0" width="100%">
-<tbody><tr><td colspan="3"><hr color="#e7cfab"></td></tr>
-<tr><td valign="top" width="180">
-  <a href="http://www.affordabletours.com"><img src="http://img.affordabletours.com/AffordableTours/Site/affordabletours_small_logo.gif" align="top" width="170" height="32" border="0"></a></td><td valign="top" align="left" width="350">
-  <table cellpadding="0" cellspacing="0" border="0">
-  <tbody><tr><td>
-  <font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small;">Copyright © 2004 AffordableTours.com. All rights reserved.</font></td></tr>
-  <tr><td>
-    <a href="http://www.affordabletours.com/Info/aboutus.html" class="terms">About Us</a><font size="1" face="Verdana,Arial,Helvetica"> -
-    </font>
-    <a href="http://www.affordabletours.com/Terms/termsandconditions.html" class="terms">Terms and Conditions</a><font size="1" face="Verdana,Arial,Helvetica"> -
-    </font>
-    <a href="http://www.affordabletours.com/Terms/privacypolicy.html" class="terms">Privacy Policy</a><font size="1" face="Verdana,Arial,Helvetica"> -
-    </font>
-<a href="mailto:sales@AffordableTours.com" class="terms">Contact us</a></td></tr>
-<tr><td><font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small;">Email us:</font><a href="mailto:sales@affordabletours.com" class="terms">Sales@AffordableTours.com</a></td></tr>
-<tr><td><font style="font-family: Verdana,Arial,Helvetica; font-size: x-small; color:red">1-866-265-2651</font> <font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small;">or</font> <font style="font-family: Verdana,Arial,Helvetica; font-size: x-small; color:red">1-281-269-2600</font>
-
-</td></tr>
-<tr><td><font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small;"><a href="http://www.affordabletours.com" class="terms">Home</a> - <a href="http://cruises.affordabletours.com" class="terms">Cruises</a> - <a href="http://rivers.affordabletours.com" class="terms">River Cruises</a></font></td></tr>
+<table cellpadding="2" cellspacing="2" border="0" width="770" style="border-top: 1px solid #6DBEE8; border-bottom: 1px solid #6DBEE8">
+<tbody><tr><td width="100">
+<a href="http://www.affordabletours.com">
+<img src="http://img.affordabletours.com/img/BottomLogo.gif" align="top" border="0" width="170" height="32"></a>
+</td>
+<td>
+<table cellpadding="0" cellspacing="0" border="0" style="font-family: Arial; size: 6px;">
+  <tbody><tr><td><font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small;">Copyright © 2004 AffordableTours.com. All rights reserved.</font></td></tr>
+  <tr><td><a href="http://www.affordabletours.com/Info/aboutus.html" class="blackhighlink">About Us</a> - <a href="http://www.affordabletours.com/Terms/termsandconditions.html" class="blackhighlink">Terms and Conditions</a> - <a href="http://www.affordabletours.com/Terms/privacypolicy.html" class="blackhighlink">Privacy Policy</a> - <a href="http://www.affordabletours.com/Info/customerservice.html" class="blackhighlink">Contact us</a></td></tr>
+  <tr><td><font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small;">Email us:</font><a href="mailto:sales@affordabletours.com" class="blackhighlink">Sales@AffordableTours.com</a></td></tr>
+  <tr><td><font style="font-family: Verdana,Arial,Helvetica; font-size: x-small; color:red; font-weight: bold">1-800-935-2620</font> <font style="font-family: Verdana,Arial,Helvetica; font-size: xx-small;">OR</font> <font style="font-family: Verdana,Arial,Helvetica; font-size: x-small; color:red; font-weight: bold;">1-281-269-2600</font></td></tr>
+  <tr><td><a href="http://www.affordabletours.com" class="blackhighlink">Home</a> - <a href="http://cruises.affordabletours.com" class="blackhighlink">Cruises</a> - <a href="http://rivers.affordabletours.com" class="blackhighlink">River Cruises</a></td></tr>
 </tbody></table>
-  </td>
-  <td valign="top" align="left"> </td>
-  </tr>
+</td></tr>
 </tbody></table>
 
 <!-- Footer -->
