--- a/j/ja/jam/jamaicandates.com.html
+++ b/j/ja/jam/jamaicandates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jamaicandates.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605164427id_/http%3A//jamaicandates.com/ppolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jamaicandates.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206230604id_/http%3A//www.jamaicandates.com/ppolicy.php) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/guest.dwt" --><head>
 <!-- #BeginEditable "doctitle" -->
