--- a/b/be/bee/beechnut.com.html
+++ b/b/be/bee/beechnut.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the beechnut.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604201113id_/http%3A//www.beechnut.com/privacy_policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the beechnut.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206231942id_/http%3A//beechnut.com/privacy_policy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Beech-Nut Baby Food: Privacy</title>
@@ -126,7 +126,7 @@ function MM_swapImage() { //v3.0
                 <td><img name="dot0_tn" src="../../../header_subpage_images/dot0_tn.gif" width="8" height="12" border="0" alt=""></td>
                 <td><a href="http://BNHelpLine.Milnot.com" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tn_contact','','../../../header_subpage_images/tn_contact_f2.gif',1);"><img name="tn_contact" src="../../../header_subpage_images/tn_contact.gif" width="56" height="12" border="0" alt=""></a></td>
                 <td><img name="dot1_tn" src="../../../header_subpage_images/dot1_tn.gif" width="12" height="12" border="0" alt=""></td>
-                <td><a href="../../../Where%20To%20Buy/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tn_where_to_buy','','../../../header_subpage_images/tn_where_to_buy_f2.gif',1);"><img name="tn_where_to_buy" src="../../../header_subpage_images/tn_where_to_buy.gif" width="66" height="12" border="0" alt=""></a></td>
+                <td><a href="http://beechnut.findlocation.com/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tn_where_to_buy','','../../../header_subpage_images/tn_where_to_buy_f2.gif',1);"><img name="tn_where_to_buy" src="../../../header_subpage_images/tn_where_to_buy.gif" width="66" height="12" border="0" alt=""></a></td>
                 <td><img name="dot_tn" src="../../../header_subpage_images/dot_tn.gif" width="11" height="12" border="0" alt=""></td>
                 <td><a href="http://www.beechnut.com/spanish/index.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tn_espanol_home','','../../../header_subpage_images/tn_espanol_home_f2.gif',1);"><img name="tn_espanol_home" src="../../../header_subpage_images/tn_espanol_home.gif" width="42" height="12" border="0" alt=""></a></td>
                 <td><img name="dot4_tn" src="../../../header_subpage_images/dot4_tn.gif" width="20" height="12" border="0" alt=""></td>
@@ -586,7 +586,7 @@ function MM_swapImage() { //v3.0
             <td><img name="dot3_bn" src="../../../../footer_images/dot3_bn.gif" width="14" height="9" border="0" alt=""></td>
             <td><a href="../../../../../Special%20Offers/modify.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('bn_modify_profile','','../../../../footer_images/bn_modify_profile_f2.gif',1);"><img name="bn_modify_profile" src="../../../../footer_images/bn_modify_profile.gif" width="71" height="9" border="0" alt=""></a></td>
             <td><img name="dot5_bn" src="../../../../footer_images/dot5_bn.gif" width="15" height="9" border="0" alt=""></td>
-            <td><a href="http://www.ebeechnut.com" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image41','','../../../../footer_images/bn_ecard_f2.gif',1)"><img src="../../../../footer_images/bn_ecard.gif" name="Image41" width="73" height="9" border="0"></a></td>
+            <td><a href="../ecards/index.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image41','','../../../../footer_images/bn_ecard_f2.gif',1)"><img src="../../../../footer_images/bn_ecard.gif" name="Image41" width="73" height="9" border="0"></a></td>
             <td><img name="dot6_bn" src="../../../../footer_images/dot6_bn.gif" width="15" height="9" border="0" alt=""></td>
             <td><a href="../../../../../Our%20Company/our_Partners.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('bn_partner','','../../../../footer_images/bn_partner_f2.gif',1);"><img name="bn_partner" src="../../../../footer_images/bn_partner.gif" width="66" height="9" border="0" alt=""></a></td>
             <td><img name="dot6_bn" src="../../../../footer_images/dot6_bn.gif" width="15" height="9" border="0" alt=""></td>
