--- a/d/dr/dre/dreamhorse.com.html
+++ b/d/dr/dre/dreamhorse.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dreamhorse.com privacy policy that was archived on 2004-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040630023704id_/http%3A//www.dreamhorse.com/policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dreamhorse.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206232223id_/http%3A//dreamhorse.com/policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Dream Horse Classifieds - Privacy Statement</title>
