--- a/c/ch/che/cheapflights.co.za.html
+++ b/c/ch/che/cheapflights.co.za.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cheapflights.co.za privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606133913id_/http%3A//cheapflights.co.za/misc/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cheapflights.co.za privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206232319id_/http%3A//cheapflights.co.za/misc/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <!-- #BeginEditable "doctitle" -->
@@ -99,7 +99,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
 <tbody><tr><td width="100%"><p><b>About Us<br>
 </b>This is a privacy policy for the owners of this website, Cheapflights.com Limited.</p>
-    <p> Our website is located at <a href="http://www.cheapflight.com" target="_blank">www.cheapflight.co.za</a>.&nbsp;</p>
+    <p> Our website is located at <a href="http://www.cheapflights.co.za" target="_blank">www.cheapflights.co.za</a>.&nbsp;</p>
 <p> We invite you to <a href="feedback.html" target="_blank">contact us</a> if you have questions about this policy.</p>
 <p> You may contact us by mail at the following address: </p>
 <p>Content Editor<br>
@@ -151,32 +151,19 @@ The banners appearing on this website are delivered to you, on our behalf, by Do
 <div align="center"><center>
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
-<tbody><tr><td width="100%"></td></tr></tbody></table>
+<tbody><tr><td width="100%">&nbsp;</td></tr></tbody></table>
 </center>
 </div>
 
 <table border="0" align="center" cellpadding="8" cellspacing="0" width="100%">
 
-<tbody><tr><td class="bodytext" align="center"><p><b>International departures:&nbsp; </b><a href="http://www.cheapflights.co.uk">Cheap Flights</a>&nbsp;<span class="smallblack">(UK)</span>&nbsp;
-    <a href="http://www.cheapflights.com/">Cheap Flights</a>&nbsp;<span class="smallblack">(US)&nbsp;</span> <a href="http://www.cheapflights.ca">Cheap Flights</a>&nbsp;<span class="smallblack">(CA)</span>&nbsp;
-    <a href="http://www.cheapflights.com.au">Cheap Flights</a> <span class="smallblack">(OZ &amp; NZ)</span><br>
-      <a href="http://www.cheapflights.com.hk">Cheap Flights</a>&nbsp;<span class="smallblack">(HK)</span>&nbsp;
-    <a href="http://www.vols123.com">Vols 123</a>&nbsp;<span class="smallblack">(FR)</span>&nbsp;
-    <a href="http://www.vuelosbaratos123.com">Vuelos Baratos</a>&nbsp;<span class="smallblack">(ES)</span>&nbsp;
-    <a href="http://www.cheapflights.dk">Billig Flyrejser</a> <span class="smallblack">(DK)&nbsp;</span>
-      <a href="http://www.billigfliegen123.de">Billig Fliegen</a> <span class="smallblack">(DE)</span><br>
-      <a href="http://www.offertevoli.it">Offerte Voli</a>&nbsp;<span class="smallblack">(IT)</span>&nbsp;
-    <a href="http://www.cheapflights.com.ru">Cheap Flights</a>&nbsp;<span class="smallblack">(RU)</span>&nbsp;
-    <a href="http://www.billigflug.com">Billigflug </a><span class="smallblack">(DE)</span>&nbsp;
-    <a href="http://www.billige-flybilletter-123.com">Billige Flybilletter</a>&nbsp;<span class="smallblack">(NO)</span>&nbsp;
-    <a href="http://www.vliegtickets-123.nl">Goedkope Vliegtickets</a> <span class="smallblack">(NL)</span><br>
-      <a href="http://www.cheapflights.ch">Billig fliegen</a> <span class="smallblack">(CH)</span>&nbsp;
-    <a href="http://www.billigaflyg.se">Billiga Flyg</a>&nbsp;<span class="smallblack">(SE)</span>&nbsp;
-    <a href="http://www.cheapflights.at">Flugreise</a>&nbsp;<span class="smallblack">(AT)</span>&nbsp;
-    <a href="http://www.halvat-lennot-123.com">Halvat Lennot</a>&nbsp;<span class="smallblack">(FI)</span><br>
+<tbody><tr><td class="bodytext" align="center"><p><b>
+      International departures: &nbsp;</b><a href="http://www.cheapflights.co.uk">Cheap
+      Flights - UK</a> | <a href="http://www.cheapflights.com/">Cheap Flights
+      - USA</a> | <a href="international.html">Other international departures</a><br>
     &nbsp;<br>
-<b>Site Information:&nbsp;</b>  <a href="feedback.html">Feedback</a>&nbsp;&nbsp;<a href="about.html">About Us</a>&nbsp;
-    <a href="../alerts.html">Email alerts</a></p>
+<b>Site Information:&nbsp;</b>  <a href="feedback.html">Feedback</a>&nbsp; | &nbsp;<a href="about.html">About Us</a>&nbsp;
+    |&nbsp; <a href="../alerts.html">Email alerts</a></p>
 </td></tr>
 <tr><td>
             <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#CCCCFF">
@@ -185,15 +172,12 @@ The banners appearing on this website are delivered to you, on our behalf, by Do
               </tr>
             </tbody></table>
   </td></tr>
-<tr valign="top"><td class="smallText" align="center"><font color="#000000"><b>Other products:</b>&nbsp;
-    <a href="http://www.cheapaccommodation.com">Cheap Accommodation &amp; Hotels</a><img height="8" hspace="4" src="../images/pxGrey.gif" width="1">USA users:
-      <a href="http://www.cheapflights.com">Cheap flights &amp; airline tickets</a><img height="8" hspace="4" src="../images/pxGrey.gif" width="1"><a href="http://www.cheapestflights.com">Cheapest Flights?</a>
-      (Fun site)<br>
-      UK users: <a href="http://www.cheap-hotels.co.uk">Hotels cheap?</a><img height="8" hspace="4" src="../images/pxGrey.gif" width="1"><a href="http://www.cheapholidaydeals.co.uk/short-breaks/">City breaks</a><img height="8" hspace="4" src="../images/pxGrey.gif" width="1"><a href="http://www.cheapholidaydeals.co.uk">Bargain Holidays</a><img height="8" hspace="4" src="../images/pxGrey.gif" width="1"><!--<a href="misc/cheapflightsse.html">Cheapflights.co.uk Info</a>&nbsp;&nbsp;<IMG height="8" hspace="4" src="images/pxGrey.gif" width="1">--><a href="cheapnightsse.html">Cheapaccommodation.com Info</a><img height="8" hspace="4" src="../images/pxGrey.gif" width="1"><a href="others.html">Other domains we own</a><br>
+<tr valign="top"><td class="smallText" align="center"><font color="#000000"><b>Compare travel deals on:</b>&nbsp;
+    <a href="http://www.cheapaccommodation.com">Hotels and Accommodation</a> |
+      <a href="http://www.cheapholidaydeals.co.uk">Holidays</a> (UK) | <a href="http://www.cheapholidaydeals.co.uk/short-breaks/">Short breaks</a> (UK)<br>
     &nbsp;<br>
     © 1996-2004
-      Cheapflights Ltd. All rights reserved&nbsp;&nbsp;</font>  <a href="terms_conditions.html">Terms &amp; conditions</a>&nbsp;&nbsp;
-    <a href="http://www.world-of-cheap-flights.com">www.world-of-cheap-flights.com</a></td></tr>
+      Cheapflights Ltd. All rights reserved&nbsp;&nbsp;</font>  <a href="terms_conditions.html">Terms &amp; conditions</a></td></tr>
 <tr><td>
             <table border="0" cellpadding="0" cellspacing="0" width="100%" bgcolor="#CCCCFF">
               <tbody><tr>
@@ -201,9 +185,4 @@ The banners appearing on this website are delivered to you, on our behalf, by Do
               </tr>
             </tbody></table>
   </td></tr></tbody></table>
-
-<br>
-
-
-
 </body></html>
