--- a/p/pa/pay/payu.co.za.html
+++ b/p/pa/pay/payu.co.za.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the payu.co.za privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606051314id_/http%3A//www.payu.co.za/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the payu.co.za privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206234008id_/http%3A//www.payu.co.za/privacypolicy.php) for the most accurate reproduction.-->
 
 <html><head><link href="payu.css" rel="stylesheet">
 </head><body leftmargin="2" topmargin="2">
@@ -11,10 +11,10 @@
 
 
 
-<img src="/images/homeheader.gif" alt="" width="747" height="63" border="0" usemap="#Map"> 
+<img src="images/homeheader.png" alt="" width="747" height="63" border="0" usemap="#Map"> 
 <map name="Map">
   <area shape="rect" coords="393,11,492,27" href="http://www.payu.co.za/webmail/">
-  <area shape="rect" coords="499,11,604,26" href="http://www.payu.co.za/addemail.php">
+  <area shape="rect" coords="502,11,607,26" href="http://www.payu.co.za/addemail.php">
   <area shape="rect" coords="613,12,674,25" href="http://www.payu.co.za/faqs.php">
   <area shape="rect" coords="683,11,735,25" href="http://www.payu.co.za/help.php">
   <area shape="rect" coords="294,11,382,27" href="http://www.payu.co.za">
@@ -71,7 +71,9 @@
  <br><br><img src="http://www.payu.co.za/images/greyline.gif" border="0" alt="" width="747" height="1"><br>
 <div class="payusmallcopy">
 |<a href="http://www.payu.co.za/termsandconditions.php"> Terms and conditions </a>|&nbsp; <a href="http://www.payu.co.za/privacypolicy.php">Privacy policy</a>&nbsp;|&nbsp;<a href="http://www.payu.co.za/advertise.php">Advertise on this service</a>&nbsp;|<br>
-<div class="caption">By continuing to use the Sunday Times PAYU Internet service you agree to abide by our<br> Terms and conditions of Use Agreement and Privacy Policy.<br>
+<div class="caption">By continuing to use the  PAYU Internet service
+  you agree to abide by our<br>
+   Terms and conditions of Use Agreement and Privacy Policy.<br>
 <img src="http://www.payu.co.za/images/greyline.gif" border="0" alt="" width="747" height="1"><br>
  <br></div>
 <p></p>
