--- a/h/ha/har/hard69.com.html
+++ b/h/ha/har/hard69.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hard69.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606154932id_/http%3A//hard69.com/%3Fpage%3Dprivacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hard69.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206234656id_/http%3A//www.hard69.com/%3Fpage%3Dprivacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
@@ -95,8 +95,7 @@
  </p><p><b>How To Contact Us  </b>
 
  </p><ul>
- <li>Should you have other questions or concerns about this Privacy Policy, please send us an email at support@hard69.com
- </li></ul>
+ <li>Should you have other questions or concerns about this Privacy Policy, please send us an email at support@hard69.com </li></ul>
 
 <div class="bigger" align="center"><br>
 <a href="javascript:window.close()">Back</a></div>
