--- a/h/ha/har/hardrock.com.html
+++ b/h/ha/har/hardrock.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hardrock.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606024137id_/http%3A//hardrock.com/corporate/policy/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hardrock.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206234844id_/http%3A//www.hardrock.com/corporate/policy/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//IETF//DTD HTML 3.0//EN"><html><head>
 
