--- a/h/hi/his/historic-uk.com.html
+++ b/h/hi/his/historic-uk.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the historic-uk.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604172555id_/http%3A//www.historic-uk.com/PrivacyStatement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the historic-uk.com privacy policy that was archived on 2004-12-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041206235306id_/http%3A//historic-uk.com/PrivacyStatement.htm) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -25,8 +25,7 @@
 <p align="right">
 <b>  <font size="6" color="#FFFFFF" align="center" face="Times New Roman">H</font><font color="#FFFFFF" align="center" face="Times New Roman Special G1"><font size="4">ISTORIC</font><font size="5">-</font></font></b></p>
     <p align="center">&nbsp;
-    </p><p align="center">&nbsp;tr&gt;
-            <table border="0" cellpadding="0" vlink="yellow" align="center" width="102" height="261">
+    </p><p align="center">&nbsp;<table border="0" cellpadding="0" vlink="yellow" align="center" width="102" height="261">
           <tbody><tr>
             <td align="left" width="96" height="22">
  <p align="left">
@@ -81,11 +80,12 @@
           </tr>
           <tr>
             <td align="left" width="96" height="21"><a href="Disclaimer.htm"><font color="#FFFF00" size="2" face="Arial Narrow Special G1"><b>Disclaimer</b></font></a></td>
-          </tr><tr><td align="left" width="96" height="21">
-            <a href="PrivacyStatement.htm"><font color="#FFFF00" size="2" face="Arial Narrow Special G1"><b>Privacy Statement</b></font></a></td>
           </tr>
-
-
+          <tr>
+            <td align="left" width="96" height="21">
+            <b>
+            <a href="PrivacyStatement.htm"><font color="#FFFF00" size="2" face="Arial Narrow Special G1">Privacy Statement</font></a></b></td>
+          </tr>
         </tbody></table>
       
     </p></td><td width="164%" valign="top" height="1">
