clearancejobs.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech;jobrelated",
  "char_count": 3376,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.75,
  "homepage_snapshot_redirected_domain": "clearancejobs.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040929105041id_/http://www.clearancejobs.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040929105041id_/http%3A//clearancejobs.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "clearancejobs.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207000327id_/http%3A//www.clearancejobs.com/index.php%3Faction%3Dprivacy",
  "policy_title": "Security Clearance Jobs - ClearanceJobs.com",
  "policy_url": "clearancejobs.com/index.php?action=privacy",
  "sha1": "b2fb63034729a92c0adbf506f5847ea8e142dcfe",
  "simhash": 14459709942265933384,
  "simhash_updated": false,
  "site_hostname": "clearancejobs.com",
  "site_url": "http://clearancejobs.com",
  "smog": 13.97,
  "strict_updated": false,
  "timestamp": "20041207000327",
  "word_count": 523,
  "year": 2004
}

--- a/c/cl/cle/clearancejobs.com.html
+++ b/c/cl/cle/clearancejobs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the clearancejobs.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602191153id_/http%3A//www.clearancejobs.com/index.php%3Faction%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clearancejobs.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207000327id_/http%3A//www.clearancejobs.com/index.php%3Faction%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="description" content="Post your resume and job search for careers requiring an active security clearance. Apply for government jobs online. Employers search resumes of cleared job seekers all with active clearances. Get expert career guidance.">
@@ -61,7 +61,7 @@ A.sortlink:visited {text-decoration: underline; color: #0000FF; font-weight: bol
 A.sortlink:hover {text-decoration: underline; color: #FF0000; font-weight: bold }
 
 .white { color: #FFFFFF }
-.notice { color: #FF0000; font-weight: bold }
+.notice { color: #FF0000; font-weight: bold; font-size: 11px }
 .highlight { color: #000000; background-color: #FFFF00; font-weight: bold }
 .fav_app { color: #009900; font-weight: normal; font-size: 9px }
 
@@ -224,7 +224,7 @@ function view_desc(v) {
 	<td colspan="2" height="23">
 	<table border="0" cellspacing="0" cellpadding="0" width="100%"><tbody><tr>
 	<td bgcolor="#020054" height="23" nowrap="" class="white">&nbsp;<a class="white" href="http://www.clearancejobs.com/security_clearance_faq.pdf">FAQ</a> :: <a class="white" href="http://www.clearancejobs.com/index.php">Home</a> <font color="#FFFFFF">::</font> <font color="#FFFFFF">Privacy Statement</font></td>
-	<td bgcolor="#020054" height="23" align="RIGHT" nowrap=""><font color="#FFFFFF">Wednesday June  2, 2004 03:12 PM EDT</font>&nbsp;&nbsp;</td>
+	<td bgcolor="#020054" height="23" align="RIGHT" nowrap=""><font color="#FFFFFF">Monday December  6, 2004 07:03 PM EST</font>&nbsp;&nbsp;</td>
 	</tr></tbody></table>
 	</td>
 </tr>
@@ -287,7 +287,7 @@ For more information regarding online privacy, please visit <a target="_BLANK" c
 	<td>
 	<table border="0" cellspacing="0" cellpadding="0" width="100%">
 	<tbody><tr>
-	<td width="20%" background="http://www.clearancejobs.com/images/look/footer_s.gif">&nbsp;</td>
+	<td align="CENTER" width="20%" background="http://www.clearancejobs.com/images/look/footer_s.gif"><a href="http://www.dice.com" target="_BLANK"><img src="http://www.clearancejobs.com/images/115x36_dice_logo.gif" width="115" height="36" border="0" alt="Visit Dice"></a></td>
 	<td width="60%" nowrap="" height="42" align="CENTER" background="http://www.clearancejobs.com/images/look/footer_s.gif" style="background-repeat: repeat-x ! important">
 <a class="footer" href="http://www.clearancejobs.com/contact.php">Contact Us</a> |
 <a class="footer" href="http://www.clearancejobs.com/index.php?action=pricing">Pricing</a> |
@@ -299,7 +299,7 @@ For more information regarding online privacy, please visit <a target="_BLANK" c
 <a class="footer" href="http://www.clearancejobs.com/index.php?action=privacy">Privacy Policy</a> |
 <a class="footer" href="javascript:about_us()">About Us</a> |
 <a class="footer" href="http://www.clearancejobs.com/security_clearance_faq.pdf">Security Clearance FAQ</a><br>
-© 2004 <a class="blue" href="http://www.immediatechnologygroup.com" target="_BLANK">Immedia Technology Group, Inc</a> - Software © 2001 <a class="blue" href="http://www.eRecruiter.com" target="_BLANK">eRecruiter LLC</a><br>
+© 2004 <a class="blue" href="http://www.dice.com" target="_BLANK">Dice Inc.</a> - Software © 2001 <a class="blue" href="http://www.eRecruiter.com" target="_BLANK">eRecruiter LLC</a><br>
 <img src="http://www.clearancejobs.com/images/null.gif" width="1" height="10"><br>
 	</td>
 	<td align="CENTER" width="20%" background="http://www.clearancejobs.com/images/look/footer_s.gif"><a href="http://www.erecruiter.com" target="_BLANK"><img src="http://www.clearancejobs.com/images/pb.gif" width="115" height="36" border="0" alt="Visit eRecruiter"></a></td>
@@ -313,6 +313,6 @@ For more information regarding online privacy, please visit <a target="_BLANK" c
 <br><br>
 
 
-<!-- Seconds to complete: 0.18725 (461415 pages per day) -->
-<!--1.75 MB-->
+<!--  Seconds to complete: 0.22363 (386360 pages per day) -->
+<!--1.74 MB-->
 </body></html>
