hsbc.com.mt (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 3161,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.75,
  "homepage_snapshot_redirected_domain": "hsbc.com.mt",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040927032038id_/http://www.hsbc.com.mt/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040927032038id_/http%3A//hsbc.com.mt",
  "interval": "2004_B",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "hsbc.com.mt",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207001511id_/http%3A//www.hsbc.com.mt/html/privacy.htm",
  "policy_title": "HSBC Privacy",
  "policy_url": "hsbc.com.mt/html/privacy.htm",
  "sha1": "ceab592f1da45336171e769a9ab833b62474841e",
  "simhash": 6331018024845545597,
  "simhash_updated": true,
  "site_hostname": "hsbc.com.mt",
  "site_url": "http://hsbc.com.mt",
  "smog": 12.52,
  "strict_updated": true,
  "timestamp": "20041207001511",
  "word_count": 520,
  "year": 2004
}

--- a/h/hs/hsb/hsbc.com.mt.html
+++ b/h/hs/hsb/hsbc.com.mt.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hsbc.com.mt privacy policy that was archived on 2004-04-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040405060617id_/http%3A//www.hsbc.com.mt/html/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hsbc.com.mt privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207001511id_/http%3A//www.hsbc.com.mt/html/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head><title>HSBC Privacy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><!-- Issued by HSBC Malta p.l.c. (c) Copyright 2001.Creation Date 12/11/2001 Created by HSBC Bank Malta Marketing--><link rel="stylesheet" href="hsbc.css">
@@ -90,14 +90,14 @@ function MM_nbGroup(event, grpName) { //v3.0
           <td valign="top" width="611"> 
             <table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
               <tbody><tr> 
-                <td width="11" height="14"></td>
-                <td width="286"></td>
-                <td width="56"></td>
-                <td width="249"></td>
-                <td width="27"></td>
+                <td width="2" height="14"></td>
+                <td width="282"></td>
+                <td width="43"></td>
+                <td width="275"></td>
+                <td width="9"></td>
               </tr>
               <tr> 
-                <td height="1031"></td>
+                <td height="978"></td>
                 <td colspan="3" valign="top"> 
                   <p align="center">&nbsp;</p>
                   <p align="center"><b><font face="Arial, Helvetica, sans-serif" size="3" color="#FF0000">HSBC 
@@ -133,25 +133,56 @@ function MM_nbGroup(event, grpName) { //v3.0
                     Group companies, all our staff and all third parties with 
                     permitted access to your information are specifically required 
                     to observe our confidentiality obligations.</font></p>
+                  <p><font face="Arial, Helvetica, sans-serif" size="2"><b>COOKIES, 
+                    WEB BEACONS AND SPOTLIGHT TAGS</b><br>
+                    <br>
+                    Cookies are pieces of information that a website transfers 
+                    to your computer's hard disc for record keeping purposes.<br>
+                    Cookies can make the web more useful by storing information 
+                    about your preferences on particular sites, thus enablingwebsite 
+                    owners to provide more useful features for their users. They 
+                    contain no name or address information or any information 
+                    that will enable anyone to contact you via telephone, e-mail 
+                    or any other means. Most browsers are initially set to accept 
+                    cookies. If you would prefer, you can set your browser to 
+                    disable cookies or inform you when they are set. <br>
+                    Information on how to disable cookies can be obtained by referring 
+                    to either your Operating Systems Manual or your Browser Guide, 
+                    or by contacting your Internet Service Provider. However, 
+                    given that we may sometimes use cookies you may not be able 
+                    to take full advantage of our website if you do disable them.</font></p>
+                  <p><font face="Arial, Helvetica, sans-serif" size="2">Our Personal 
+                    Internet Banking service uses session cookies to establish 
+                    and maintain your banking session with us. With cookies enabled, 
+                    you shouldn't notice any difference to the service. Personal 
+                    Internet Banking requires your web browser to accept a session 
+                    cookie before you can log on or register for the service. 
+                    Session cookies only exist until you close down your web browser, 
+                    as opposed to permanent cookies which your browser stores 
+                    until they expire. If your browser is set to disable cookies, 
+                    you won't be able to access Personal Internet Banking.</font></p>
+                  <p><font face="Arial, Helvetica, sans-serif" size="2">HSBC web 
+                    pages may contain electronic images, known as web beacons 
+                    or spotlight tags. These enable HSBC to count users who have 
+                    visited certain pages on our website. Web beacons and spotlight 
+                    tags are not used by us to access your personal information, 
+                    they are simply a tool we use to analyse which web pages customers 
+                    view, in an aggregated manner.</font></p>
                   <p><font face="Arial, Helvetica, sans-serif" size="2">By maintaining 
                     our commitment to these principles, we at HSBC will ensure 
-                    that we respect the inherent trust that you place in us.</font><br>
-                  </p>
-                  <p>&nbsp;</p>
-                  <p><font face="Arial, Helvetica, sans-serif"></font><font face="Arial, Helvetica, sans-serif"> 
-                    </font> </p>
+                    that we respect the inherent trust that you place in us.</font></p>
                 </td>
                 <td></td>
               </tr>
               <tr> 
-                <td height="14"></td>
+                <td height="16"></td>
                 <td></td>
-                <td valign="top"><a href="default.htm" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','backbutton_r1_c2','../images/backbutton_r1_c2_f2.gif','../images/backbutton_r1_c2_f4.gif',1)" onclick="MM_nbGroup('down','navbar1','backbutton_r1_c2','../images/backbutton_r1_c2_f3.gif',1)"><img name="backbutton_r1_c2" src="../images/backbutton_r1_c2.gif" width="52" height="14" border="0"></a></td>
+                <td valign="top"><a href="default.htm" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','backbutton_r1_c2','../images/backbutton_r1_c2_f2.gif','../images/backbutton_r1_c2_f4.gif',1)" onclick="MM_nbGroup('down','navbar1','backbutton_r1_c2','../images/backbutton_r1_c2_f3.gif',1)"><font face="Arial, Helvetica, sans-serif" size="2">Back</font></a></td>
                 <td></td>
                 <td></td>
               </tr>
-              <tr> 
-                <td height="12"></td>
+              <tr>
+                <td height="65"></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -161,7 +192,7 @@ function MM_nbGroup(event, grpName) { //v3.0
                 <td height="16"></td>
                 <td colspan="4" valign="top"> 
                   <div align="right"><font size="-1" face="Arial, Helvetica, sans-serif">© 
-                    Copyright 2002. HSBC Bank Malta p.l.c.</font></div>
+                    Copyright 2004. HSBC Bank Malta p.l.c.</font></div>
                 </td>
               </tr>
             </tbody></table>
