homesteps.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;realestate",
  "char_count": 5206,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.63,
  "homepage_snapshot_redirected_domain": "homesteps.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001024948id_/http://www.homesteps.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001024948id_/http%3A//homesteps.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "homesteps.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207013140id_/http%3A//www.homesteps.com/private_policy.html",
  "policy_title": "Home Steps , A Freddie Mac Unit: Private Policy",
  "policy_url": "homesteps.com/private_policy.html",
  "sha1": "3075b3586d766bcd6a36475911b68a8cc257902c",
  "simhash": 4350456829032069555,
  "simhash_updated": true,
  "site_hostname": "homesteps.com",
  "site_url": "http://homesteps.com",
  "smog": 15.6,
  "strict_updated": true,
  "timestamp": "20041207013140",
  "word_count": 872,
  "year": 2004
}

--- a/h/ho/hom/homesteps.com.html
+++ b/h/ho/hom/homesteps.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the homesteps.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606023500id_/http%3A//www.homesteps.com/private_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homesteps.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207013140id_/http%3A//www.homesteps.com/private_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <!--WEBSIDESTORY CODE HBX1.0 (Universal)-->
@@ -224,9 +224,13 @@ function MM_showHideLayers() { //v3.0
                 longer contact you. We also may use information that you provide 
                 to measure general statistics about visits to our site and interest 
                 in particular areas. We do not sell this information to third 
-                party companies. By sending an email or making a request or inquiry, 
-                you agree to permit Freddie Mac to keep and use the information 
-                you have given us consistent with this policy. </p>
+                party companies. We may disclose information from website visitors 
+                to third parties, such as contractors, consultants and other service 
+                providers, so that the third party can provide a business, professional 
+                or technical support function for the website visitor or for Freddie 
+                Mac. By sending an email or making a request or inquiry, you agree 
+                to permit Freddie Mac to keep and use the information you have 
+                given us consistent with this policy. </p>
               <p>If you enter personal and financial information into a financing 
                 or affordability calculator offered on our site – such as 
                 income, the down payment you want to make, the length of a loan 
