marylandtaxes.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance;education",
  "char_count": 2892,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.76,
  "homepage_snapshot_redirected_domain": "marylandtaxes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040926120302id_/http://www.marylandtaxes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040926120302id_/http%3A//marylandtaxes.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "marylandtaxes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207023443id_/http%3A//www.marylandtaxes.com/main/privacy.asp",
  "policy_title": "Welcome to the Comptroller of Maryland's Homepage",
  "policy_url": "marylandtaxes.com/main/privacy.asp",
  "sha1": "1ec9753bb029f04acb270c722339dd6d22ae7322",
  "simhash": 2132750010316986558,
  "simhash_updated": false,
  "site_hostname": "marylandtaxes.com",
  "site_url": "http://marylandtaxes.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20041207023443",
  "word_count": 475,
  "year": 2004
}

--- a/m/ma/mar/marylandtaxes.com.html
+++ b/m/ma/mar/marylandtaxes.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the marylandtaxes.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602224749id_/http%3A//www.marylandtaxes.com/main/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the marylandtaxes.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207023443id_/http%3A//www.marylandtaxes.com/main/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -156,7 +156,7 @@ function seek1SetCols(v) {
 <img height="1" alt="" src="/glmedia/1ptrans.gif" width="11" border="0">
 <a href="http://business.marylandtaxes.com/taxforms/default.asp">Business Taxes</a><br>
 <img height="1" alt=" " src="/glmedia/1ptrans.gif" width="11" border="0">
-<a href="https://interactive.marylandtaxes.com/comptrollercra/entrance.asp">Business Registration</a><br>
+<a href="https://interactive.marylandtaxes.com/webapps/comptrollercra/entrance.asp">Business Registration</a><br>
 <br>
 <b>Tax Information</b><br>
 <img height="1" alt="" src="/glmedia/1ptrans.gif" width="11" border="0">
@@ -183,7 +183,7 @@ function seek1SetCols(v) {
 <a href="/publications/default.asp">more...</a><br>
 <br>
 <b>Online Services</b><br>
-<img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">&nbsp;<a href="https://interactive.marylandtaxes.com/Business/osc/" target="display">bFile - Business Taxes</a><br>
+<img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">&nbsp;<a href="https://interactive.marylandtaxes.com/Business/osc/">bFile - Business Taxes</a><br>
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">
 <a href="https://ifile.marylandtaxes.com/default.asp">iFile - Personal Taxes</a><br>
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">
@@ -193,13 +193,13 @@ function seek1SetCols(v) {
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">
 <a href="http://individuals.marylandtaxes.com/filinginfo/extension.asp">Request an Extension</a><br>
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">
-<a href="/main/calculator.asp">Tax Calculator</a><br>
+<a href="main/calculator.asp">Tax Calculator</a><br>
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">
-<a href="https://interactive.marylandtaxes.com/unclaim/default.asp">Unclaimed Property</a><br>
+<a href="https://interactive.marylandtaxes.com/unclaim/default.asp">Unclaimed Owner Search</a><br>
+<img height="1" src="/glmedia/1ptrans.gif" width="11" border="0"> <a href="https://interactive.marylandtaxes.com/business/Compliance/UnclaimedPR/">Unclaimed Property</a> <br><img height="1" src="/glmedia/1ptrans.gif" width="11" border="0"> <a href="https://interactive.marylandtaxes.com/business/Compliance/UnclaimedPR/">Holder Filing</a><br>
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">
 <a href="https://interactive.marylandtaxes.com/directory.asp">more...</a><br>
 <br>
-
 <b>About the Comptroller</b><br>
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">&nbsp;<a href="/main/about_the_comptroller/about_wds.asp">William Donald Schaefer</a><br>
 <img height="1" src="/glmedia/1ptrans.gif" width="11" border="0">
