michiganbulb.com (archived on 2004-12-07)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 6206,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.31,
  "homepage_snapshot_redirected_domain": "michiganbulb.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040926012019id_/http://michiganbulb.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040926012019id_/http%3A//michiganbulb.com",
  "interval": "2004_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "michiganbulb.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041207024137id_/http%3A//michiganbulb.com/article_disp.asp%3Fai%3D131",
  "policy_title": "Michigan Bulb Co.",
  "policy_url": "michiganbulb.com/article_disp.asp?ai=131",
  "sha1": "d6c49c00ea88e99ff60f0292995ed04ee615fe17",
  "simhash": 16237751443451325484,
  "simhash_updated": true,
  "site_hostname": "michiganbulb.com",
  "site_url": "http://michiganbulb.com",
  "smog": 15.56,
  "strict_updated": true,
  "timestamp": "20041207024137",
  "word_count": 1060,
  "year": 2004
}

--- a/m/mi/mic/michiganbulb.com.html
+++ b/m/mi/mic/michiganbulb.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the michiganbulb.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603061336id_/http%3A//michiganbulb.com/article_disp.asp%3Fai%3D131) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the michiganbulb.com privacy policy that was archived on 2004-12-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041207024137id_/http%3A//michiganbulb.com/article_disp.asp%3Fai%3D131) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title> Michigan Bulb Co. </title>
@@ -36,7 +36,7 @@ window.open (PageName,"detail_window","width=500,height=500, location=0,menubar=
 					<td width="310" colspan="2">
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="2"><b>Bestsellers &amp; Bargains:</b></font></td>
 				</tr>
-				<tr>
+				<tr valign="top">
 					<td width="170">
 						
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<!-- <img src="images/exclamleader.gif" width="11" height="13" border=0 alt=""> --><a href="search.asp?sc=exc">Michigan Bulb Exclusives!</a><br>
@@ -44,7 +44,8 @@ window.open (PageName,"detail_window","width=500,height=500, location=0,menubar=
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<!-- <img src="images/exclamleader.gif" width="11" height="13" border=0 alt=""> --><a href="search.asp?sc=new">New for You!</a></td>
 					<td width="140">
 						&nbsp;&nbsp;&nbsp;<!-- <img src="images/exclamleader.gif" width="11" height="13" border=0 alt=""> --><a href="cart.asp">View Cart</a><br>
-						&nbsp;&nbsp;&nbsp;<!-- <img src="images/exclamleader.gif" width="11" height="13" border=0 alt=""> --><a href="login.asp?login_type=order_status">Order Lookup</a><br>
+						<!--&nbsp;&nbsp;&nbsp;<img src="images/exclamleader.gif" width="11" height="13" border=0 alt="">
+						<a href="login.asp?login_type=order_status">Order Lookup</a><br>-->
 						&nbsp;&nbsp;&nbsp;<!-- <img src="images/exclamleader.gif" width="11" height="13" border=0 alt=""> --><a href="article_disp.asp?ai=244">Help</a></td>
 				</tr>
 		</tbody></table></td>
